Fix styles * Add list overflow * Modify files view button * Direct commit to master

--- a/src/components/ActionTypes.css
+++ b/src/components/ActionTypes.css
@@ -1,3 +1,7 @@
+.ActionTypes {
+  overflow: scroll;
+}
+
 .ActionTypes .lander {
   padding: 80px 0;
   text-align: center;
