--- a/src/components/EndUsers.css
+++ b/src/components/EndUsers.css
@@ -1,3 +1,7 @@
+.EndUsers {
+  overflow: scroll;
+}
+
 .EndUsers .lander {
   padding: 80px 0;
   text-align: center;
