--- a/src/components/Items.css
+++ b/src/components/Items.css
@@ -1,3 +1,7 @@
+.Items {
+  overflow: scroll;
+}
+
 .Items .lander {
   padding: 80px 0;
   text-align: center;
