--- a/src/components/Locations.css
+++ b/src/components/Locations.css
@@ -1,3 +1,7 @@
+.Locations {
+  overflow: scroll;
+}
+
 .Locations .lander {
   padding: 80px 0;
   text-align: center;
